<resources>
    <string name="app_name">Calendar Application</string>
    <string name="_10_11_1998">10-11-1998</string>
    <string name="date">Date : </string>
    <string name="day">Day : </string>
    <string name="number_of_day">Number of Day</string>
    <string name="month">Month :</string>
    <string name="_18">18</string>
    <string name="modey">modey</string>
    <string name="july">July</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="_6">6</string>
    <string name="convert_to_hijri">Convert To Hijri</string>
    <string name="hijriconvert_to_gregorian">hijriconvert to gregorian</string>
    <string name="data">Data</string>
    <string name="alathnyn">alathnyn</string>
    <string name="_1435">1435</string>
    <string name="click_to_add_event">CLICK TO ADD EVENT</string>
    <string name="save">SAVE</string>
    <string name="click_to_enter_date">Click To Enter Date</string>
    <string name="title">Title</string>
    <string name="test">laskdjlaskdjlsakdjlasalkdjlaskdjlaskdjlaskdjlaskdas;d;lasldjal;</string>
    <string name="events_page">Events Page</string>
    <string name="home_page">Home Page</string>
    <string name="menu">menu</string>
    <string name="enter_mm_dd_yyyy">Enter MM-DD-YYYY</string>
    <string name="event_title">Event Title</string>
    <string name="your_event">YOUR EVENT</string>
    <string name="delete">Delete</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="add_event_for_this_date">Add Event For This Date</string>
    <string name="event_added">Event Added</string>
    <string name="error">ERROR</string>
    <string name="delete_event">Delete Event</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="add_event">Add Event</string>
    <string name="_12_40_03">12:40:03</string>
    <string name="success_edit">Success Edit</string>
    <string name="my_event">My Event</string>
    <string name="home">Home Page</string>
    <string name="momo">MOMO</string>
    <string name="hijri_date">Hijri Date: %1$s</string>
    <string name="erorr">ERROR : %1$s</string>
    <string name="tagoo">TAGOO</string>
    <string name="invalid_date_format">\"Invalid date format!\"</string>
    <string name="empty">Empty</string>
    <string name="edit_text">Edit Text</string>
    <string name="save_edit">Save Edit</string>
    <string name="select_item_to_delete">select item to delete</string>
    <string name="date_incorrect">\"Date InCorrect\"</string>
    <string name="handle_error">Error : %1$s</string>
    <string name="event_database">event_database</string>
    <string name="event_page">Event Page</string>
    <string name="try_again">Try Again</string>
    <string name="field_empty">Field Empty</string>
    <string name="dd_mm_yyyy">^(0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[0-2])-(\\d{4})$</string>
    <string name="no_date_entered">No Date Entered</string>
    <string name="back">back</string>
    <string name="edit_page">Edit Page</string>
</resources>