<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="calendarData"
            type="com.mstart.calendarapplication.domin.model.response.DateResponseRemoteModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/radius_dialog">

        <ProgressBar
            android:id="@+id/pb_dialog"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Yellow"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_dialog_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fonzm"
                        android:gravity="center"
                        android:text="@string/add_event_for_this_date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_gre_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/fonzm"
                        android:gravity="center"
                        android:text="@{calendarData.gregorian.date.toString()}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
                        tools:text="@string/_10_11_1998" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_date_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/fonzm"
                        android:gravity="center"
                        android:maxLength="5"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
                        tools:text="@string/_12_40_03" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_day_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/day"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_day"
                            hijriWeekday="@{calendarData.hijri.weekday}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            tools:text="@string/alathnyn" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_date_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/data"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@{calendarData.hijri.date}"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            tools:text="@string/_1435" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_month_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/month"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_month"
                            hijriMonth="@{calendarData.hijri.month}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fonzm"
                            android:paddingVertical="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            tools:text="Ramadan" />
                    </LinearLayout>
                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_20sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_event_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/radius_et"
                        android:gravity="center"
                        android:hint="@string/event_title"
                        android:padding="@dimen/_10sdp"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_event_desc"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:background="@drawable/radius_et"
                        android:fontFamily="@font/pbu"
                        android:gravity="center"
                        android:hint="@string/click_to_add_event"
                        android:padding="@dimen/_10sdp"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_event_title" />

                    <View
                        android:id="@+id/v_space"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:background="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_save" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:background="@drawable/background__button"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_event_desc" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>