<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="calendarData"
            type="com.mstart.calendarapplication.domin.model.response.DateResponseRemoteModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/home"
            app:titleTextColor="@color/orange" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/radius_et"
            android:gravity="center"
            android:hint="@string/enter_mm_dd_yyyy"
            android:padding="@dimen/_20sdp"
            android:text="@{calendarData.gregorian.date}"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_home" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background__button"
            android:fontFamily="@font/fonzm"
            android:padding="@dimen/_10sdp"
            android:text="@string/convert_to_hijri"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_date" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_home_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_convert"
            app:strokeColor="@color/white"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_empty"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="@dimen/_270sdp"
                    android:alpha="0.3"
                    android:src="@drawable/rafiki"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_convert"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.3"
                    android:fontFamily="@font/fonzm"
                    android:gravity="center"
                    android:text="@string/no_date_entered"
                    android:textColor="@color/Yellow"
                    android:textSize="@dimen/_30sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_empty" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/black"
            android:visibility="@{calendarData != null ? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_convert">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Yellow"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_15sdp"
                    tools:ignore="ExtraText">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:fontFamily="@font/fonzm"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fonzm"
                        android:text="@{calendarData.hijri.date}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        tools:text="@string/_10_11_1998" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Yellow"
                    android:gravity="center"

                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:fontFamily="@font/fonzm"
                        android:text="@string/month"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_month"
                        hijriMonth="@{calendarData.hijri.month}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fonzm"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        tools:text="@string/_10_11_1998" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Yellow"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:fontFamily="@font/fonzm"
                        android:text="@string/day"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_day"
                        hijriWeekday="@{calendarData.hijri.weekday}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fonzm"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        tools:text="@string/_10_11_1998" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:backgroundTint="@color/Yellow"
            android:fontFamily="@font/fonzm"
            android:src="@drawable/baseline_add_24"
            android:textSize="@dimen/_18sdp"
            android:visibility="@{calendarData != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:backgroundTint="@color/Yellow"
            android:fontFamily="@font/fonzm"
            android:src="@drawable/baseline_add_24"
            android:textSize="@dimen/_18sdp"
            android:visibility="@{calendarData != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>