<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="event"
            type="com.mstart.calendarapplication.domin.model.room.EventEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ProgressBar
            android:id="@+id/pb_edit"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/baby_blue"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_events"
            app:title="@string/edit_page"
            app:titleTextColor="@color/orange" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_edit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/fonzm"
                    android:text="@{event.eventTitle}"
                    android:textColor="@color/Yellow"
                    android:textSize="@dimen/_25sdp"
                    tools:text=" My Birth day" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@color/black"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp">


                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ed_desc_update"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_gravity="center"
                            android:background="@color/gray"
                            android:gravity="center"
                            android:text="@{event.eventDesc}"
                            android:textColor="@color/black"
                            tools:text="@string/test" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_save_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@color/Yellow"
                            android:fontFamily="@font/fonzm"
                            android:gravity="center"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/save_edit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cdEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>